syntax = "proto3";
package Fantasy.Network.Message;
// 协议分为:
// ProtoBuf:可以在Outer和Inner文件里使用。
// MemoryPack:可以在Outer和Inner文件里使用。
// Bson:仅支持在Inner文件里使用。
// 使用方式:
// 在message协议上方添加// Protocol+空格+协议名字
// 例如:// Protocol ProtoBuf 或 // Protocol MemoryPack

message Vector3_Position
{
  float x = 1;
  float y = 2;
  float z = 3;
}

// 普通消息
message OrdinaryMessage // IMessage
{
	string Tag = 1;
}

//登录请求
message LoginRequest // IRequest,LoginResponse
{
  string name = 1;
}
message LoginResponse // IResponse
{
  int32 id = 1;
  bool isLogin = 2;
}

//玩家数据
message PlayerDataMessage // IMessage
{
  int32 id = 1;
  string name = 2;
  Vector3_Position Position = 3;
}

// 客户端创建玩家预制体消息
message CreatePlayrPrefabMessage // IMessage
{
  int32 id = 1;
  Vector3_Position CreatePosition = 2;
}
message DelectPlayerPrefabMessage // IMessage
{
  int32 id = 1;
}

message OrdinaryRequest // IRequest,OrdinaryResponse
{
	string Tag = 1;
}
message OrdinaryResponse // IResponse
{
	string Tag = 1;
}